--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "sass": "^1.77.6",
+    "swiper": "^11.1.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
